kotlin-ide/idea/testData/multiplatform/hierarcicalActualization/jvmAndJs/jvmAndJs.kt
package foo

actual class ExpectInCommonActualInMiddle

expect class ExpectInMiddleActualInPlatforms

expect class <!NO_ACTUAL_FOR_EXPECT, NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleWithoutActual<!>
